cluster/monitoring/victoriametrics/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vms
  namespace: monitoring
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik-internal
  rules:
    - host: vms.local.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vms
                port:
                  number: 8428
